infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
            limits:
              cpu: 500m
          image: 024848437933.dkr.ecr.ap-northeast-2.amazonaws.com/paperple-spring:v0.0.60
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ecr-secret

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-svc
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
    - protocol: TCP
      name: https
      port: 443
      targetPort: 8080
  selector:
    app: backend
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-ai
  namespace: default
  labels:
    app: fastapi-ai
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-ai
  template:
    metadata:
      labels:
        app: fastapi-ai
    spec:
      containers:
        - name: fastapi-ai
          image: 024848437933.dkr.ecr.ap-northeast-2.amazonaws.com/paperple-ai:v0.0.29
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 500m
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ecr-secret

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi-ai
  name: fastapi-ai-svc
  namespace: default
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: fastapi-ai
  type: ClusterIP
